--- a/package.json
+++ b/package.json
@@ -1,27 +1,32 @@
 {
-  "name": "341-cse-project1",
+  "name": "cse341-project-princesses",
   "version": "1.0.0",
-  "description": "My first project",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js",
+    "lint": "eslint",
+    "format": "prettier --write ."
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/narradoresdigitales/341-cse-project1.git"
-  },
-  "author": "Marcus 'Sil' Palmer",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/narradoresdigitales/341-cse-project1/issues"
-  },
-  "homepage": "https://github.com/narradoresdigitales/341-cse-project1#readme",
+  "description": "",
   "dependencies": {
-    "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "mongodb": "^6.16.0",
-    "swagger-autogen": "^2.23.7",
-    "swagger-ui-express": "^5.0.1"
+    "express-validator": "^7.2.1",
+    "mongoose": "^8.15.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "validatorjs": "^3.22.1"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.27.0",
+    "eslint": "^9.27.0",
+    "globals": "^16.1.0",
+    "nodemon": "^3.1.10",
+    "prettier": "^3.5.3"
   }
 }
